# fastapi-azure-auth

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  lunr-index-1782918275571.json  lunr-index-1782987101983.json  lunr-index-1782989628730.json  mypy.ini  pyproject.toml  pytest.ini  search-doc-1782918275571.json  search-doc-1782987101983.json  search-doc-1782989628730.json
.github/ISSUE_TEMPLATE/: security.md
.github/workflows/: codeql-analysis.yaml  coverage.yaml  publish_docs.yaml  publish_to_pypi.yaml  testing.yaml
assets/js/: 0e0048d6.b61f7cba.js  17896441.2caaae9f.js  17896441.440d043f.js  1ad6a286.39ce0887.js  27.e8d176d0.js  4338ef83.3e8569ae.js  4338ef83.93dcc8c5.js  4640ce17.b1b44b83.js  5964223c.53d6f7ad.js  624fcd96.3abf8131.js  670d863f.b06eec35.js  77c04317.92c5fce7.js  8641a95d.a852e99b.js  94d9bb9b.1d2612a4.js  972d9d57.8d7b9b44.js  9a65b867.bb0bda70.js  9dcf1fd7.60eac5c4.js  a633a1c5.d68880eb.js  a94703ab.488e919b.js  b5a82c26.de18b2d1.js  b7b10d73.6b959dc8.js  bccea385.bf2ba94b.js  e281ba72.109862b6.js  fa4d91bf.7e11b60c.js  fa4d91bf.98384edb.js  fdf5c168.97e657a3.js  main.45d35768.js  main.c74747ed.js  main.fa2d55dd.js  runtime~main.23a4e3af.js  runtime~main.78882727.js  runtime~main.fcab96db.js
b2c/azure_setup/: index.html
b2c/fastapi_configuration/: index.html
demo_project/: main.py
demo_project/api/: dependencies.py
demo_project/api/api_v1/: api.py
demo_project/api/api_v1/endpoints/: graph.py  hello_world.py  hello_world_multi_auth.py
demo_project/core/: config.py
demo_project/schemas/: hello_world.py
docs/: README.md  docusaurus.config.ts  package.json
docs/docs/: installation.mdx  introduction.mdx
docs/docs/b2c/: fastapi_configuration.mdx
docs/docs/multi-tenant/: accept_specific_tenants_only.mdx  fastapi_configuration.mdx
docs/docs/single-tenant/: fastapi_configuration.mdx
docs/docs/usage-and-faq/: accessing_the_user.mdx  admin_consent_when_logging_in.mdx  graph_usage.mdx  testing.mdx
fastapi_azure_auth/: __init__.py  auth.py  exceptions.py  openid_config.py  user.py  utils.py
installation/: index.html
multi-tenant/accept_specific_tenants_only/: index.html
multi-tenant/azure_setup/: index.html
multi-tenant/fastapi_configuration/: index.html
settings/b2c/: index.html
settings/multi_tenant/: index.html
settings/single_tenant/: index.html
single-tenant/azure_setup/: index.html
single-tenant/fastapi_configuration/: index.html
tests/: .env.test  conftest.py  test_exception_compat.py  test_openapi_scheme.py  test_provider_config.py  test_user.py  utils.py
tests/multi_tenant/: conftest.py  test_multi_tenant.py  test_websocket.py
tests/multi_tenant/multi_auth/: test_auto_error.py
tests/multi_tenant_b2c/: conftest.py  test_multi_tenant.py
tests/multi_tenant_b2c/multi_auth/: test_auto_error.py
tests/single_tenant/: conftest.py  test_single_tenant.py
usage-and-faq/accessing_the_user/: index.html
usage-and-faq/admin_consent_when_logging_in/: index.html
usage-and-faq/calling_your_apis_from_python/: index.html
usage-and-faq/graph_usage/: index.html
usage-and-faq/guest_users/: index.html
usage-and-faq/locking_down_on_roles/: index.html
usage-and-faq/testing/: index.html
usage-and-faq/troubleshooting/: index.html
